--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,7 +12,7 @@
         <div class="forgot-link">
             <a aria-label="Forgot password"  href="">Forgot Password?</a>
         </div>
-        <button aria-label="Login"  class="btn btn-primary">
+        <button aria-label="Login" (click)="logIn()"  class="btn btn-primary">
             Login
         </button>
     </form>
