Added child routes config

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,13 +1,1 @@
-
-<div class="grid-container">
-    <aside>
-        <contact-keeper-sidebar></contact-keeper-sidebar>
-    </aside>
-    <div class="divider">
-    </div>
-    <main>
-        <!-- <ck-home></ck-home> -->
-        <!-- <router-outlet></router-outlet> -->
-        <contact-keeper-contact-list></contact-keeper-contact-list>
-    </main>
-</div>
+Hello contact
