--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+
+<div class="grid-container">
+    <aside>
+        <contact-keeper-sidebar></contact-keeper-sidebar>
+    </aside>
+    <div class="divider">
+    </div>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+</div>
