added main container layout

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,8 @@
-Hello contact
+<div class="contact-lists">
+    <ck-contact-list></ck-contact-list>
+    <ck-contact-list></ck-contact-list>
+    <ck-contact-list></ck-contact-list>
+    <ck-contact-list></ck-contact-list>
+    <ck-contact-list></ck-contact-list>
+    <ck-contact-list></ck-contact-list>
+</div>
