--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,5 +9,13 @@
     background: #EEEEEE;
 }
 aside{
-    padding:40px 25px;
+    padding:40px 0;
+}
+
+header{
+ 
+}
+.main{
+    padding: 30px 70px;
+    height: calc( 100vh - 100px);
 }
