--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,9 @@
-<h1 class="title">Contact Keeper</h1>
+<h1 class="title cursor">Contact Keeper</h1>
 <div class="nav-container">
-    <contact-keeper-navcontainer></contact-keeper-navcontainer>
+    <ck-navcontainer></ck-navcontainer>
 </div>
-<div class="user-info">
-    <contact-keeper-user-info></contact-keeper-user-info>
+<div class="user-info-wrapper">
+    <div class="user-info">
+        <ck-user-info></ck-user-info>
+    </div>
 </div>
