--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,1 +1,4 @@
-<p>user-info works!</p>
+<div class="user-info-container">
+   <img class="profile-thump" src="https://lh3.googleusercontent.com/ogw/ADGmqu-2D2Qd5LHxnXGWqWKEpaTQKMxMPRiqAkCa-ahn=s32-c-mo" alt="">
+    <span>Chellappan V</span>
+</div>
