contact list layout fix

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,8 +1,6 @@
-<div class="contact-lists">
-    <ck-contact-list></ck-contact-list>
-    <ck-contact-list></ck-contact-list>
-    <ck-contact-list></ck-contact-list>
-    <ck-contact-list></ck-contact-list>
-    <ck-contact-list></ck-contact-list>
-    <ck-contact-list></ck-contact-list>
-</div>
+    <ck-contact-list [contacts]="contacts"></ck-contact-list>
+
+    <!-- <div class="not-found-container">
+        <h1>No Contacts found</h1>
+        <p><span>Click here</span> to add new contacts</p>
+    </div> -->
