--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,3 +1,92 @@
-<div class="contact-list-item">
-
+<div class="contact-list-grid" >
+    <div class="contact-list-item add-contacts">
+      <div class="add-contact-img">
+      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+      <g>
+        <path style="fill:#2E36D2;" d="M38.788,170.667h23.273h23.273c12.853,0,23.273-10.42,23.273-23.273
+          c0-12.853-10.42-23.273-23.273-23.273H62.061H38.788c-12.853,0-23.273,10.42-23.273,23.273
+          C15.515,160.247,25.935,170.667,38.788,170.667z"/>
+        <path style="fill:#2E36D2;" d="M85.333,232.727H62.061H38.788c-12.853,0-23.273,10.42-23.273,23.273
+          c0,12.853,10.42,23.273,23.273,23.273h23.273h23.273c12.853,0,23.273-10.42,23.273-23.273
+          C108.606,243.147,98.186,232.727,85.333,232.727z"/>
+        <path style="fill:#2E36D2;" d="M85.333,341.333H62.061H38.788c-12.853,0-23.273,10.42-23.273,23.273s10.42,23.273,23.273,23.273
+          h23.273h23.273c12.853,0,23.273-10.42,23.273-23.273S98.186,341.333,85.333,341.333z"/>
+      </g>
+      <g>
+        <circle style="fill:#C9DDF4;" cx="279.273" cy="201.697" r="69.818"/>
+        <path style="fill:#C9DDF4;" d="M279.273,271.514c-59.982,0-108.606,48.621-108.606,108.606h217.212
+          C387.879,320.135,339.254,271.514,279.273,271.514z"/>
+      </g>
+      <path style="fill:#5286FA;" d="M473.212,0H279.273H162.909C107.301,0,62.061,45.241,62.061,100.848v23.273h23.273
+        c12.853,0,23.273,10.42,23.273,23.273c0,12.853-10.42,23.273-23.273,23.273H62.061v62.061h23.273
+        c12.853,0,23.273,10.42,23.273,23.273c0,12.853-10.42,23.273-23.273,23.273H62.061v62.061h23.273
+        c12.853,0,23.273,10.42,23.273,23.273s-10.42,23.273-23.273,23.273H62.061v23.273C62.061,466.759,107.301,512,162.909,512h116.364
+        h193.939c12.853,0,23.273-10.42,23.273-23.273V23.273C496.485,10.42,486.065,0,473.212,0z M279.273,380.121H170.667
+        c0-59.985,48.624-108.606,108.606-108.606c-38.558,0-69.818-31.26-69.818-69.818c0-38.561,31.26-69.818,69.818-69.818
+        c38.558,0,69.818,31.257,69.818,69.818c0,38.558-31.26,69.818-69.818,69.818c59.982,0,108.606,48.621,108.606,108.606H279.273z"/>
+      <path style="fill:#3D6DEB;" d="M170.667,380.12c0-59.985,48.624-108.606,108.606-108.606c-38.558,0-69.818-31.26-69.818-69.818
+        c0-38.56,31.26-69.818,69.818-69.818V0H162.909C107.301,0,62.061,45.241,62.061,100.848v23.273h23.273
+        c12.853,0,23.273,10.42,23.273,23.273c0,12.853-10.42,23.273-23.273,23.273H62.061v62.061h23.273
+        c12.853,0,23.273,10.42,23.273,23.273c0,12.853-10.42,23.273-23.273,23.273H62.061v62.061h23.273
+        c12.853,0,23.273,10.42,23.273,23.273s-10.42,23.273-23.273,23.273H62.061v23.273C62.061,466.759,107.301,512,162.909,512h116.364
+        V380.12H170.667z"/>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      <g>
+      </g>
+      </svg>
+    </div>
+      <h2 class="add-contact">Add Contacts</h2>
+      <p>click here to add contacts</p>
+    </div>
+    <div class="contact-list-item" *ngFor="let contact of contacts;">
+    <div class="contact-card-header">
+        <div class="contact-details">
+          <img class="contact-profile-pic" src="https://lh3.googleusercontent.com/ogw/ADGmqu-2D2Qd5LHxnXGWqWKEpaTQKMxMPRiqAkCa-ahn=s83-c-mo" alt="">
+          <div class="contact-info">
+              <h2>{{contact.name}}</h2>
+              <small>{{contact.email}}</small>
+          </div>
+        </div>
+        <div class="contact-list-options">
+          <span class="unfavourite" *ngIf="!contact.isFavourite">
+            <i class="far fa-star"></i>
+          </span>
+          <span class="favourite" *ngIf="contact.isFavourite">
+            <i class="fas fa-star"></i>
+          </span>
+          <span class="more-options"><i class="fas fa-ellipsis-v"></i> </span>         
+        </div>
+    </div>
+    <div class="contact-list-body">
+      <h1>{{contact.phoneNumber}}</h1>
+    </div>
+    </div>
 </div>
