--- a/src/app/contact/contact-list/contact-list.component.scss
+++ b/src/app/contact/contact-list/contact-list.component.scss
@@ -1,5 +1,70 @@
+.contact-list-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px;
+    height: 100%;
+}
+
 .contact-list-item{
     width: 100%;
-    height: 300px;
-    border: 1px solid gold;
+    border-radius: 8px;
+    border: 1px solid #dadce0;
+}
+
+.contact-card-header{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid #EEEEEE;
+}
+
+.contact-details{
+    display: flex;
+    flex:0 0 70%;
+    align-items: center;
+}
+.contact-list-options{
+    flex: 1;
+    display: flex;
+    gap: 15px;
+    justify-content: flex-end;
+}
+.favourite{
+    
+}
+.more-options{
+
+}
+.contact-list-options > *{
+    cursor: pointer;
+}
+.contact-profile-pic{
+    border-radius: 50%;
+    width: 40px;
+    vertical-align: middle;
+}
+
+.add-contacts{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+}
+.add-contact-img{
+    width: 75px;
+}
+
+.add-contact{
+    line-height: 30px;
+}
+.contact-info{
+    padding-left: 8px;
+}
+.contact-list-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
 }
