--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 70px;
+    // box-shadow: 0 10px 20px -7px rgb(160 44 219 / 7%);
 }
 .month{
     font-size: 14px;
