--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -86,6 +86,7 @@
         </div>
     </div>
     <div class="contact-list-body">
+      <div><i class="fas fa-phone-alt"></i></div>
       <h1>{{contact.phoneNumber}}</h1>
     </div>
     </div>
