--- a/src/app/contact/contact-list/contact-list.component.scss
+++ b/src/app/contact/contact-list/contact-list.component.scss
@@ -5,6 +5,9 @@
     height: 100%;
 }
 
+:host > *{
+    color: #0A0E1C;
+}
 .contact-list-item{
     width: 100%;
     border-radius: 8px;
@@ -67,4 +70,10 @@
     justify-content: center;
     align-items: center;
     height: 150px;
+}
+
+.fa-phone-alt{    
+    font-size: 35px;
+    padding-right: 10px;
+    color: #20203F;
 }
